--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <img id="bio-image" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAmCAAAAJDdjMDczYWM5LTFjZmMtNGI1Yy04ZjFjLTc5NzAzYWExMzI4Ng.jpg" alt="Andrea Pic">
 
-      <p>I was born in Peru and moved to Northern Virginia when I was 6 years old. My hobbies include rock climbing, writing, reading, and napping when I see fit. I attended George Mason University where I earned my Bachelor's degree in Business Management with a minor in Economics. I worked in the staffing industry for a year before deciding that I wanted to pursue a career in web development.</p>
+      <p>I was born in Peru and moved to Northern Virginia when I was 6 years old. My hobbies include rock climbing, writing, reading, and napping. I attended George Mason University where I earned my Bachelor's degree in Business Management with a minor in Economics. I worked in the staffing industry for a year before deciding that I wanted to pursue a career in web development.</p>
     </section>
 
     <section id="contact-info">
