--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Andrea's Portfolio</title>
 
-  <link rel="stylesheet" type="text/css" href="css/bio.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
@@ -23,15 +23,9 @@
 
       <p>I was born in Peru and moved to Northern Virginia when I was 6 years old. My hobbies include rock climbing, writing, reading, and napping. I attended George Mason University where I earned my Bachelor's degree in Business Management with a minor in Economics. I worked in the staffing industry for a year before deciding that I wanted to pursue a career in web development.</p>
     </section>
-
-    <section id="contact-info">
-      <h2>Contact Info</h2>
-      <ul>
-        <li><strong>Email:</strong> <a href="mailto:andreapinillos1@gmail.com">andreapinillos1@gmail.com</a></li>
-        <li><strong>Github:</strong> <a href="https://github.com/andreapinillos/">andreapinillos</a></li>
-        <li><strong>Portfolio:</strong> <a href="https://github.com/andreapinillos/Basic_Portfolio">Coming Coon </a></li>
-      </ul>
-    </section>
+  <footer>
+    &lt; Copyright 2017 Andrea Pinillos
+  </footer>
   </div>
 
 </body>
