--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,9 @@
         <li><strong>Portfolio:</strong> <a href="https://github.com/andreapinillos/Basic_Portfolio">Coming Coon </a></li>
       </ul>
     </section>
+    <footer>
+    &lt; Copyright 2017 Andrea Pinillos
+  </footer>
   </div>
 
 </body>
