--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
       </ul>
     </section>
     <footer>
-    &lt; Copyright 2017 Andrea Pinillos
+    &lt; Copyright 2017 Andrea Pinillos&gt; 
   </footer>
   </div>
 
