--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
     </div>
   </section>
   <footer>
-    &lt; Copyright 2017 Andrea Pinillos
+    &lt; Copyright 2017 Andrea Pinillos&gt; 
   </footer>
   </div>
 
